--- a/app/angular.json
+++ b/app/angular.json
@@ -26,11 +26,10 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
-              {
-                "glob": "_redirects",
-                "input": "src",
-                 "output": "/"
-              }
+              
+               "src/assets",
+         "src/_redirects"
+              
             ],
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
