--- a/app/angular.json
+++ b/app/angular.json
@@ -26,10 +26,11 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
-              
-               "src/assets",
-         "src/_redirects"
-              
+              {
+                "glob": "_redirects",
+                "input": "src",
+                 "output": "/"
+              }
             ],
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
