Revert "Routing for Netlify setup"
This reverts commit 00d5b7a26b4967e8194c7453e42763f044047cd8.

--- a/app/angular.json
+++ b/app/angular.json
@@ -27,9 +27,8 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               {
-                "glob": "_redirects",
-                "input": "src",
-                 "output": "/"
+                "glob": "**/*",
+                "input": "public"
               }
             ],
             "styles": [
